# Changelog
# $Id$
02-28-17 - Version 5.1.41

  - Fix for Bug#25438355, Improper automatic deserialization of binary data.

  - Fix for Bug#70785 (17756825), MySQL Connector/J inconsistent init state for autocommit.
    Property 'elideSetAutoCommits' is temporarily disabled due to Bug#66884. Defaults to 'false' until this bug is fixed.

  - Fix for Bug#75615 (21181249), Incorrect implementation of Connection.setNetworkTimeout().

  - Fix for Bug#81706 (23535001), NullPointerException in driver.

  - Fix for Bug#81108 (23264511), FabricMySQLConnectionProxy.setShardTable method logic miss.

  - Fix for Bug#83052 (25048543), static method in com.mysql.jdbc.Util relies on null object.

  - Fix for Bug#82203 (24289730), com.mysql.fabric.HashShardMapping is not thread safe.

  - Updated collations map.

  - Fix for Bug#69526 (17035755), 'Abandoned connection cleanup thread' at mysql-connector-java-5.1.25.

  - Fix for Bug#82826 (24942672), Unneeded version requirement for javax.net.ssl Import-Package on OSGi MANIFEST.MF.

09-30-16 - Version 5.1.40

  - Fix for Bug#24619829, NEW FAILURES IN C/JAVA UNITTESTS AGAINST MYSQL 8.0.

  - Fix for Bug#75209 (20212882), Set useLocalTransactionState may result in partially committed transaction.

  - Fix for Bug#23197238, EXECUTEQUERY() FAILS FOR JSON DATA WHEN RESULTSETCONCURRENCY=CONCUR_UPDATABLE.

  - Fix for Bug#48346 (11756431), Communications link failure when reading compressed data with compressed=true.
    Thanks to Ryosuke Yamazaki for his contribution.

  - Fix for Bug#74711 (19974685), FORGOTTEN WORKAROUND FOR BUG#36326.

  - Fix for Bug#80631 (22891845), ResultSet.getString return garbled result with json type data.
    Thanks to Dong SongLing for his contribution.

  - Fix for Bug#64188 (13702433), MysqlXAConnection.MYSQL_ERROR_CODES_TO_XA_ERROR_CODES is missing XA error codes.

  - Fix for Bug#81072 (23103408), FabricMySQLConnectionProxy method nativeSQL does nothing.
