@@ -2,6 +2,8 @@
 # $Id$
 02-28-17 - Version 5.1.41
 
+  - Fix for Bug#25504578, CONNECT FAILS WHEN CONNECTIONCOLLATION=ISO-8859-13.
+
   - Fix for Bug#25438355, Improper automatic deserialization of binary data.
 
   - Fix for Bug#70785 (17756825), MySQL Connector/J inconsistent init state for autocommit.
